--- a/index.html
+++ b/index.html
@@ -41,18 +41,22 @@ License: You must have a valid license purchased only from themeforest(the above
         <link href="assets/global/css/plugins-md.min.css" rel="stylesheet" type="text/css" />
         <!-- END THEME GLOBAL STYLES -->
         <!-- BEGIN PAGE LEVEL STYLES -->
-        <link href="assets/pages/css/login-4.min.css" rel="stylesheet" type="text/css" />
+        <link href="login/login-4.css" rel="stylesheet" type="text/css" />
         <!-- END PAGE LEVEL STYLES -->
         <!-- BEGIN THEME LAYOUT STYLES -->
         <!-- END THEME LAYOUT STYLES -->
-        <link rel="shortcut icon" href="icono.png" /> </head>
+        <link rel="shortcut icon" href="icono.png" />
+        <!-- BEGIN Sweet Alert -->
+        <script src="login/dist/sweetalert2.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="login/dist/sweetalert2.css">
+        <!-- END Sweet Alert -->
+    </head>
     <!-- END HEAD -->
 
     <body class=" login">
-    hoooooollla
         <!-- BEGIN LOGO -->
         <div class="logo">
-            <img src="assets/pages/img/ssma1.png" alt="" height=120 id="logoImg"/>
+            <img src="login/img/ssma1.png" alt="" height=120 id="logoImg"/>
         </div>
         <!-- END LOGO -->
         <!-- BEGIN LOGIN -->
@@ -78,37 +82,13 @@ License: You must have a valid license purchased only from themeforest(the above
                         <input class="form-control placeholder-no-fix" type="password" autocomplete="off" placeholder="Contraseña" name="password" id="pass"/> </div>
                 </div>
                 <div class="form-actions">
-                    <!--<label class="checkbox">
-                        <input type="checkbox" name="remember" value="1" /> Remember me </label>-->
                     <button type="submit" class="btn green pull-right" style="width:100%" id="login"> Entrar </button>
                 </div>
                 <br>
-               <!-- <div class="login-options">
-                    <h4>Or login with</h4>
-                    <ul class="social-icons">
-                        <li>
-                            <a class="facebook" data-original-title="facebook" href="javascript:;"> </a>
-                        </li>
-                        <li>
-                            <a class="twitter" data-original-title="Twitter" href="javascript:;"> </a>
-                        </li>
-                        <li>
-                            <a class="googleplus" data-original-title="Goole Plus" href="javascript:;"> </a>
-                        </li>
-                        <li>
-                            <a class="linkedin" data-original-title="Linkedin" href="javascript:;"> </a>
-                        </li>
-                    </ul>
-                </div>-->
-                <div class="forget-password">
+                <!--<div class="forget-password">
                     <h4>¿Olvidaste tu contraseña?</h4>
                     <p> Presiona
                         <a href="javascript:;" id="forget-password"> aquí </a> para restablecerla. </p>
-                </div>
-               <!-- <div class="create-account">
-                    <p> Don't have an account yet ?&nbsp;
-                        <a href="javascript:;" id="register-btn"> Create an account </a>
-                    </p>
                 </div>-->
             </form>
             <!-- END LOGIN FORM -->
@@ -133,8 +113,8 @@ License: You must have a valid license purchased only from themeforest(the above
         <div class="copyright"> 2016 &copy; DARS </div>
         <!-- END COPYRIGHT -->
         <!--[if lt IE 9]>
-<script src="../assets/global/plugins/respond.min.js"></script>
-<script src="../assets/global/plugins/excanvas.min.js"></script>
+<script src="assets/global/plugins/respond.min.js"></script>
+<script src="assets/global/plugins/excanvas.min.js"></script>
 <![endif]-->
         <!-- BEGIN CORE PLUGINS -->
         <script src="assets/global/plugins/jquery.min.js" type="text/javascript"></script>
@@ -155,7 +135,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <script src="assets/global/scripts/app.min.js" type="text/javascript"></script>
         <!-- END THEME GLOBAL SCRIPTS -->
         <!-- BEGIN PAGE LEVEL SCRIPTS -->
-        <script src="login.js" type="text/javascript"></script>
+        <script src="login/login.js" type="text/javascript"></script>
         <!--<script src="assets/pages/scripts/login-4.min.js" type="text/javascript"></script> JS ORIGINAL -->
         <!-- END PAGE LEVEL SCRIPTS -->
         <!-- BEGIN THEME LAYOUT SCRIPTS -->
