--- a/web_service/search.html
+++ b/web_service/search.html
@@ -18,12 +18,12 @@
             var localSearch = new google.search.LocalSearch();
             searchControl.addSearcher(localSearch);
             searchControl.addSearcher(new google.search.WebSearch());
-            //searchControl.addSearcher(new google.search.VideoSearch());
+            searchControl.addSearcher(new google.search.VideoSearch());
             searchControl.addSearcher(new google.search.BlogSearch());
             searchControl.addSearcher(new google.search.NewsSearch());
             searchControl.addSearcher(new google.search.ImageSearch());
-            //searchControl.addSearcher(new google.search.BookSearch());
-            //searchControl.addSearcher(new google.search.PatentSearch());
+            searchControl.addSearcher(new google.search.BookSearch());
+            searchControl.addSearcher(new google.search.PatentSearch());
 
             // Set the Local Search center point
             localSearch.setCenterPoint("Monterrey, MX");
